<resources>
    <string name="app_name">P-Brain</string>
    <string name="type_your_message">Type your question here</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings">Settings</string>
    <string name="pref_title_display_name">Server Address</string>
    <string name="pref_default_display_name">http://x.x.x.x:4567</string>
    <string name="speech_prompt">Yes?</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input.</string>
    <string name="record_instructions">While holding the microphone say \'%s\'</string>
    <string name="record_instructions1">And again…</string>
    <string name="record_instructions2">One last time</string>
    <string name="record_instructions3">Click \'Train\' to process the recordings or reset to start again</string>
    <string name="record_sample1">Hold To Record Sample 1</string>
    <string name="record_sample2">Hold To Record Sample 2</string>
    <string name="record_sample3">Hold To Record Sample 3</string>
    <string name="train">Train</string>
    <string name="train_voice">Train Hotword</string>
    <string name="reset">Reset</string>
    <string name="server_not_connected">Error connecting to server</string>
    <string name="keyword_update_success">Successfully updated keyword to \'%s\'</string>
    <string name="keyword_update_failure">Failure updating keyword to \'%s\'</string>
    <string name="disconnected">Disconnected from host</string>
    <string name="connected">Connected to server</string>
    <string name="missing_training_data">Training data missing for %s</string>
    <string name="voice_prompt">Say \'%s\' to start listening</string>
    <string name="cant_train_without_name">Can\'t train without a name.</string>
    <string name="tts_enabled">Text-to-speech Enabled</string>
    <string name="hotword_enabled">Hotword Recognition Enabled</string>
    <string name="change_user">Change User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="connection_settings">Connection Settings</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="listening_hotword">Listening for hotword…</string>
</resources>
