<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textUri"
        android:key="server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:key="tts_enabled"
        android:title="@string/tts_enabled"
        android:defaultValue="true"/>

    <SwitchPreference
        android:key="hotword_enabled"
        android:title="@string/hotword_enabled"
        android:defaultValue="true"/>

</PreferenceScreen>
