<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/record_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/record_name"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textAlignment="center" />

    <ImageView
            android:id="@+id/record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record_button"
            android:adjustViewBounds="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>

    <Button
        android:id="@+id/train"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/train"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>
